--- a/src/Araneum/Bundle/UserBundle/Resources/views/Resetting/reset.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Resetting/reset.html.twig
@@ -1,10 +1,11 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-	<form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset">
+	<form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST"
+	      class="fos_user_resetting_reset">
 		{{ form_widget(form) }}
 		<div>
-			<input type="submit" value="{{ 'resetting.reset.submit'|trans({}, 'FOSUserBundle') }}" />
+			<input type="submit" value="{{ 'resetting.reset.submit'|trans({}, 'FOSUserBundle') }}"/>
 		</div>
 	</form>
 {% endblock fos_user_content %}
