AC-39 Админ панель для Cluster

--- a/src/Araneum/Bundle/MainBundle/Resources/views/Admin/checkStatus.html.twig
+++ b/src/Araneum/Bundle/MainBundle/Resources/views/Admin/checkStatus.html.twig
@@ -1,4 +1,4 @@
 <a class="btn btn-sm btn-default" href="{{ admin.generateObjectUrl('checkStatus', object) }}">
     <i class="glyphicon glyphicon-check"></i>
-    {{ 'Check Status'|trans({}, 'AraneumMainBundle') }}
+    {{ ''|trans({}, 'AraneumMainBundle') }}
 </a>
