--- a/app/Resources/SonataAdminBundle/views/Core/user_block.html.twig
+++ b/app/Resources/SonataAdminBundle/views/Core/user_block.html.twig
@@ -7,7 +7,7 @@
                     class="glyphicon glyphicon-user fa-fw"></i> {{ 'profile'|trans({}) }}</a>
     </li>
     <li role="presentation">
-        <a href="{{ path('user_logout') }}"><i class="glyphicon glyphicon-log-out fa-fw"></i> {{ 'logout'|trans({}) }}
+        <a href="{{ path('fos_user_security_logout') }}"><i class="glyphicon glyphicon-log-out fa-fw"></i> {{ 'logout'|trans({}) }}
         </a>
     </li>
 {% endblock %}
