--- a/app/Resources/SonataAdminBundle/views/Core/user_block.html.twig
+++ b/app/Resources/SonataAdminBundle/views/Core/user_block.html.twig
@@ -3,11 +3,15 @@
         {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
     </div>
     <li role="presentation">
-        <a href="{{ url('araneum_user_user_profileShow') }}"><i
-                    class="glyphicon glyphicon-user fa-fw"></i> {{ 'profile'|trans({}) }}</a>
+        <a href="{{ url('araneum_user_user_profileShow') }}">
+            <i class="glyphicon glyphicon-user fa-fw"></i>
+            {{ 'profile'|trans({}) }}
+        </a>
     </li>
     <li role="presentation">
-        <a href="{{ path('fos_user_security_logout') }}"><i class="glyphicon glyphicon-log-out fa-fw"></i> {{ 'logout'|trans({}) }}
+        <a href="{{ path('fos_user_security_logout') }}">
+            <i class="glyphicon glyphicon-log-out fa-fw"></i>
+            {{ 'logout'|trans({}) }}
         </a>
     </li>
 {% endblock %}
