AC-75 Написание тестов для формы редактирования профиля + Profile link test + Logout link test + Restore password test + Edit profile test (validation)

--- a/src/Araneum/Bundle/UserBundle/Resources/views/Profile/show.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Profile/show.html.twig
@@ -32,7 +32,7 @@
                                                 {{ form_row(form.email) }}
                                             </div>
                                             <div class="well well-small form-actions">
-                                                <button type="submit" class="btn btn-success">
+                                                <button type="submit" name="btn_update_profile" class="btn btn-success">
                                                     <i class="fa fa-save"></i>
                                                     {{ 'btn_update'|trans({}, 'SonataAdminBundle') }}
                                                 </button>
