--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"/>
     <title>{% block title %}Core{% endblock %}</title>
     {% stylesheets
-    '@SonataAdminBundle/Resources/public/vendor/bootstrap/dist/css/bootstrap.min.css'
-    '@SonataAdminBundle/Resources/public/vendor/AdminLTE/css/font-awesome.css' %}
+    '@SonataAdminBundle/Resources/public/vendor/bootstrap/dist/css/bootstrap.min.css' %}
+
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
