--- a/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -1,27 +1,33 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
-    {% endif %}
+    {% stylesheets
+    '@AraneumUserBundle/Resources/public/css/style.css' %}
+    <link rel="stylesheet" href="{{ asset_url }}"/>
+    {% endstylesheets %}
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-4 col-md-offset-4">
                 <h1 class="text-center login-title">Araneum Core</h1>
-
                 <div class="account-wall">
                     <form action="{{ path("fos_user_security_check") }}" class="form-signin" method="POST">
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
-
-                        <input type="text" name="_username" class="form-control" placeholder="Login" required autofocus>
-                        <input type="password" name="_password" class="form-control" placeholder="Password" required>
-                        <button class="btn btn-lg btn-primary btn-block" type="submit">
-                            Sign in
-                        </button>
+                        <input type="text" name="_username" class="form-control" placeholder="{{ 'username'|trans }}"
+                               required autofocus>
+                        <input type="password" name="_password" class="form-control"
+                               placeholder="{{ 'password'|trans }}" required>
                         <label class="checkbox pull-left">
                             <input type="checkbox" value="remember-me">
-                            Remember me
+                            {{ 'remember_me'|trans }}
                         </label>
+
+                        {% if error %}
+                            <!-- <div class="error">{{ error|trans({}, 'FOSUserBundle') }}</div> -->
+                        {% endif %}
+
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">
+                            {{ 'sign_in'|trans }}
+                        </button>
                     </form>
                 </div>
             </div>
