--- a/src/Araneum/Bundle/UserBundle/Resources/public/css/style.css
+++ b/src/Araneum/Bundle/UserBundle/Resources/public/css/style.css
@@ -1,25 +1,34 @@
-.account-wall input {
-    margin-bottom: 10px;
+@font-face {
+    font-family: 'Glyphicons Halflings';
+
+    src: url('../bundles/sonataadmin/vendor/bootstrap/fonts/glyphicons-halflings-regular.woff'),
+    url('../bundles/sonataadmin/vendor/bootstrap/fonts/glyphicons-halflings-regular.ttf');
 }
 
-.account-wall button {
-    margin-bottom: 10px;
+body {
+    background: #CCC;
 }
 
-.col-sm-6 h1 {
-    margin-top: -5px;
+.panel-heading {
+    padding: 5px 15px;
 }
 
-.col-sm-6 {
-    border: #ddd 1px solid;
-    border-radius: 5px;
-    padding: 10px;
+.panel-footer {
+    padding: 1px 15px;
+    color: #A0A0A0;
+}
+
+.profile-img {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
 }
 
 .container {
-    position: absolute;
-    top: 30%;
-    left: 15%;
+    margin-top: 15% !important;
+    text-align: center;
 }
-
-div
