--- a/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -1,34 +1,66 @@
 {% extends "::base.html.twig" %}
-
 {% block body %}
     {% stylesheets
     '@AraneumUserBundle/Resources/public/css/style.css' %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
-    <div class="container">
+    <div class="container" style="margin-top:40px">
         <div class="row">
             <div class="col-sm-6 col-md-4 col-md-offset-4">
-                <h1 class="text-center login-title">Araneum Core</h1>
-                <div class="account-wall">
-                    <form action="{{ path("fos_user_security_check") }}" class="form-signin" method="POST">
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
-                        <input type="text" name="_username" class="form-control" placeholder="{{ 'username'|trans }}"
-                               required autofocus>
-                        <input type="password" name="_password" class="form-control"
-                               placeholder="{{ 'password'|trans }}" required>
-                        <label class="checkbox pull-left">
-                            <input type="checkbox" value="remember-me">
-                            {{ 'remember_me'|trans }}
-                        </label>
-
-                        {% if error %}
-                            <!-- <div class="error">{{ error|trans({}, 'FOSUserBundle') }}</div> -->
-                        {% endif %}
-
-                        <button class="btn btn-lg btn-primary btn-block" type="submit">
-                            {{ 'sign_in'|trans }}
-                        </button>
-                    </form>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <strong>{{ 'sign_in'|trans }} {{ 'to'|trans }} Araneum.Core</strong>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form" action="{{ path("fos_user_security_check") }}" method="POST">
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
+                            <fieldset>
+                                <div class="row">
+                                    <div class="center-block">
+                                        <img class="profile-img" src="http://zelmer.technoportal.ua/i/no-user.png"
+                                             alt="">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-10  col-md-offset-1 ">
+                                        <div class="form-group">
+                                            <div class="input-group">
+												<span class="input-group-addon">
+													<i class="glyphicon glyphicon-user"></i>
+												</span>
+                                                <input class="form-control" placeholder="{{ 'username'|trans }}"
+                                                       name="_username" type="text" autofocus>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group">
+												<span class="input-group-addon">
+													<i class="glyphicon glyphicon-lock"></i>
+												</span>
+                                                <input class="form-control" placeholder="{{ 'password'|trans }}"
+                                                       name="_password" type="password" value="">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <label class="checkbox pull-left">
+                                                    <input type="checkbox" value="remember-me">
+                                                    {{ 'remember_me'|trans }}
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="submit" class="btn btn-lg btn-primary btn-block"
+                                                   value="{{ 'sign_in'|trans }}">
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <div class="panel-footer ">
+                        <a href="#" onClick="">{{ 'recovery_password'|trans }}</a>
+                    </div>
                 </div>
             </div>
         </div>
