--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,9 +4,13 @@
     <meta charset="UTF-8"/>
     <title>{% block title %}Core{% endblock %}</title>
     {% stylesheets
-    '@SonataAdminBundle/Resources/public/vendor/bootstrap/dist/css/bootstrap.min.css' %}
+    'assets/vendor/bootstrap/dist/css/bootstrap.min.css'  output='assets/vendor/bootstrap/dist/css/bootstrap.min.css' %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
+
+    <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
+    <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
 </head>
 <body>
