--- a/src/Araneum/Bundle/UserBundle/Resources/public/css/style.css
+++ b/src/Araneum/Bundle/UserBundle/Resources/public/css/style.css
@@ -1,10 +1,3 @@
-@font-face {
-    font-family: 'Glyphicons Halflings';
-
-    src: url('../bundles/sonataadmin/vendor/bootstrap/fonts/glyphicons-halflings-regular.woff'),
-    url('../bundles/sonataadmin/vendor/bootstrap/fonts/glyphicons-halflings-regular.ttf');
-}
-
 body {
     background: #CCC;
 }
@@ -31,4 +24,18 @@ body {
 .container {
     margin-top: 15% !important;
     text-align: center;
+}
+
+.form-group:last-child {
+    margin-top: -17px;
+}
+
+.alert {
+    color: #a94442;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+#msgbox li {
+    list-style: none;
 }
