--- a/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -4,21 +4,48 @@
     '@AraneumUserBundle/Resources/public/css/style.css' %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
+
+    {% javascripts
+    'assets/vendor/jquery-validation/dist/jquery.validate.min.js'
+    '@AraneumUserBundle/Resources/public/js/validateLogin.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
     <div class="container" style="margin-top:40px">
         <div class="row">
             <div class="col-sm-6 col-md-4 col-md-offset-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <strong>{{ 'sign_in'|trans }} {{ 'to'|trans }} Araneum.Core</strong>
+
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                Lang
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                {% for locale in locales|split('|') %}
+                                    <li role="presentation">
+                                        <a role="menuitem" href="{{ url(
+                                        app.request.get('_route'),
+                                        app.request.attributes.get('_route_params')|merge({'_locale': locale })
+                                        ) }}">
+                                            {{ locale|capitalize }}
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
                     <div class="panel-body">
-                        <form role="form" action="{{ path("fos_user_security_check") }}" method="POST">
+                        <form role="form" action="{{ path("fos_user_security_check") }}" id="loginForm" method="POST">
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
                             <fieldset>
                                 <div class="row">
                                     <div class="center-block">
-                                        <img class="profile-img" src="http://zelmer.technoportal.ua/i/no-user.png"
-                                             alt="">
+                                        {% image '@AraneumUserBundle/Resources/public/images/no-user.png' %}
+                                        <img class="profile-img" src="{{ asset_url }}" alt=""/>
+                                        {% endimage %}
                                     </div>
                                 </div>
                                 <div class="row">
@@ -29,7 +56,7 @@
 													<i class="glyphicon glyphicon-user"></i>
 												</span>
                                                 <input class="form-control" placeholder="{{ 'username'|trans }}"
-                                                       name="_username" type="text" autofocus>
+                                                       name="_username" type="text" id="name" autofocus>
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -38,13 +65,13 @@
 													<i class="glyphicon glyphicon-lock"></i>
 												</span>
                                                 <input class="form-control" placeholder="{{ 'password'|trans }}"
-                                                       name="_password" type="password" value="">
+                                                       name="_password" type="password" id="password" value="">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="input-group">
-                                                <label class="checkbox pull-left">
-                                                    <input type="checkbox" value="remember-me">
+                                                <label class="pull-left">
+                                                    <input type="checkbox" value="remember-me" name="_remember_me">
                                                     {{ 'remember_me'|trans }}
                                                 </label>
                                             </div>
@@ -54,6 +81,20 @@
                                                    value="{{ 'sign_in'|trans }}">
                                         </div>
                                     </div>
+                                </div>
+
+                                <div id="msgbox" class="alert alert-danger alert-dismissible" role="alert">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                                                aria-hidden="true">&times;</span></button>
+                                </div>
+
+                                <div class="alert alert-danger alert-dismissible {{ error ? '' : 'hidden' }}"
+                                     role="alert">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                                                aria-hidden="true">&times;</span></button>
+                                    {% if error %}
+                                        <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
+                                    {% endif %}
                                 </div>
                             </fieldset>
                         </form>
