--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>{% block title %}Core{% endblock %}</title>
-    {% stylesheets
-    'assets/vendor/bootstrap/dist/css/bootstrap.min.css'  output='assets/vendor/bootstrap/dist/css/bootstrap.min.css' %}
-    <link rel="stylesheet" href="{{ asset_url }}"/>
-    {% endstylesheets %}
-
+    <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}"/>
     <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
     <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
 
