--- a/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -1,15 +1,14 @@
 {% extends "::base.html.twig" %}
-{% block body %}
+
+{% block stylesheets %}
+    {{ parent() }}
     {% stylesheets
     '@AraneumUserBundle/Resources/public/css/style.css' %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
+{% endblock %}
 
-    {% javascripts
-    'assets/vendor/jquery-validation/dist/jquery.validate.min.js'
-    '@AraneumUserBundle/Resources/public/js/validateLogin.js' %}
-    <script src="{{ asset_url }}"></script>
-    {% endjavascripts %}
+{% block body %}
     <div class="container" style="margin-top:40px">
         <div class="row">
             <div class="col-sm-6 col-md-4 col-md-offset-4">
@@ -87,3 +86,12 @@
         </div>
     </div>
 {% endblock body %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {% javascripts
+    'assets/vendor/jquery-validation/dist/jquery.validate.min.js'
+    '@AraneumUserBundle/Resources/public/js/validateLogin.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
