--- a/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -2,8 +2,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    {% stylesheets
-    '@AraneumUserBundle/Resources/public/css/style.css' %}
+    {% stylesheets '@AraneumUserBundle/Resources/public/css/style.css' %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 {% endblock %}
