AC-62 Кастомизировать страницу логина remove public from AraneumUserBundle

--- a/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -75,7 +75,8 @@
                         </form>
                     </div>
                     <div class="panel-footer ">
-                        <a href="#" onClick="">{{ 'recovery_password'|trans }}</a>
+                        <a href="{{ path("fos_user_resetting_request") }}"
+                           onClick="">{{ 'recovery_password'|trans }}</a>
                     </div>
                 </div>
             </div>
