AC-76 Настроить и кастомизировать сброс пароля пользователя / Need to configure and customize the...

--- a/src/Araneum/Bundle/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,5 +1,5 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "AraneumUserBundle:Resetting:request.html.twig" %}
 
-{% block fos_user_content %}
+{% block panel_body %}
 	<p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
-{% endblock fos_user_content %}
+{% endblock panel_body %}
