--- a/src/Araneum/Bundle/UserBundle/Resources/views/Profile/show.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Profile/show.html.twig
@@ -47,7 +47,7 @@
                                         {% for label, flashes in app.session.flashbag.all %}
                                             {% for flash in flashes %}
                                                 <div class="alert alert-{{ label }}">
-                                                    {{ flash }}
+                                                    {{ 'resetting.flash.success'|trans({},'FOSUserBundle') }}
                                                 </div>
                                             {% endfor %}
                                         {% endfor %}
