--- a/src/Araneum/Bundle/UserBundle/Resources/views/Resetting/checkEmail.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Resetting/checkEmail.html.twig
@@ -1,7 +1,5 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "AraneumUserBundle:Resetting:request.html.twig" %}
 
-{% block fos_user_content %}
-	<p>
-		{{ 'resetting.check_email'|trans({'%email%': email}, 'FOSUserBundle') }}
-	</p>
-{% endblock %}
+{% block panel_body %}
+	{{ 'resetting.check_email'|trans({'%email%': email}, 'FOSUserBundle') }}
+{% endblock panel_body %}
