AC-76 Настроить и кастомизировать сброс пароля пользователя / Need to configure and customize the... Перенес css, js, images в static. Поправил .gitignore

--- a/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('bundles/araneumuser/css/style.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('static/css/style.css') }}"/>
 {% endblock %}
 
 {% block panel_header %}
@@ -17,7 +17,7 @@
                 <div class="row">
                     <div class="center-block">
                         <img class="profile-img"
-                             src="{{ asset('bundles/araneumuser/images/no-user.png') }}" alt=""/>
+                             src="{{ asset('static/images/no-user.png') }}" alt=""/>
                     </div>
                 </div>
                 <div class="row">
@@ -78,5 +78,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('bundles/araneumuser/js/validateLogin.js') }}"></script>
+    <script src="{{ asset('static/js/validateLogin.js') }}"></script>
 {% endblock %}
