--- a/src/Araneum/Bundle/UserBundle/Resources/views/AdminAction/recoveryPassword.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/AdminAction/recoveryPassword.html.twig
@@ -1,3 +1,4 @@
-<a class="btn btn-sm btn-default" href="#" data-toggle="tooltip" title="{{ 'recovery_password'|trans }}">
+<a class="btn btn-sm btn-default" href="#" data-toggle="tooltip" title="{{ 'recovery_password'|trans }}"
+   disabled="disabled">
     <i class="lyphicon glyphicon-envelope"></i>
 </a>
