--- a/src/Araneum/Bundle/MainBundle/Resources/views/AdminAction/testConnection.html.twig
+++ b/src/Araneum/Bundle/MainBundle/Resources/views/AdminAction/testConnection.html.twig
@@ -1,4 +1,4 @@
 <a class="btn btn-sm btn-default" href="{{ url('araneum_main_admin_connection_testConnection', {'id': object.id}) }}"
-   title="{{ 'test_connection'|trans }}">
+   title="{{ 'test_connection'|trans }}" disabled="disabled">
     <i class="glyphicon glyphicon-signal"></i>
 </a>
