--- a/src/Araneum/Bundle/UserBundle/Resources/views/AdminAction/activateUser.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/AdminAction/activateUser.html.twig
@@ -1,3 +1,3 @@
-<a class="btn btn-sm btn-default" href="#" data-toggle="tooltip" title="{{ 'activate'|trans }}">
+<a class="btn btn-sm btn-default" href="#" data-toggle="tooltip" title="{{ 'activate'|trans }}" disabled="disabled">
     <i class="glyphicon glyphicon-ok-circle"></i>
 </a>
