--- a/src/Araneum/Bundle/MainBundle/Resources/public/css/sonata-extends.css
+++ b/src/Araneum/Bundle/MainBundle/Resources/public/css/sonata-extends.css
@@ -1,3 +1,18 @@
 .top7 {
     margin-top: 7px;
 }
+
+.box {
+    float: left;
+    display: inline-block;
+    position: relative;
+    background: #ffffff;
+    border-top: 2px solid #c1c1c1;
+    margin-bottom: 20px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    width: auto;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    margin-left: 20px;
+}
