AC-141 Implement check status in Admin panel

--- a/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
+++ b/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
@@ -346,5 +346,12 @@ file that was distributed with this source code.
 
     </div>
 {% endblock sonata_wrapper %}
+
+<script>
+    $(function () {
+
+    });
+</script>
+
 </body>
 </html>
