AC-141 Implement check status in Admin panel

--- a/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
+++ b/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
@@ -349,7 +349,9 @@ file that was distributed with this source code.
 
 <script>
     $(function () {
-
+        $('a[id^=btn-]').click(function () {
+            var url = $(this).attr('data-url');
+        });
     });
 </script>
 
