AC-141 Implement check status in Admin panel

--- a/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
+++ b/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
@@ -353,6 +353,12 @@ file that was distributed with this source code.
             var url = $(this).attr('data-url');
         });
     });
+
+    $(function () {
+        $('input[type=submit]').click(function () {
+           
+        });
+    })
 </script>
 
 </body>
