--- a/src/Araneum/Bundle/MainBundle/Resources/views/AdminAction/checkStatusCluster.html.twig
+++ b/src/Araneum/Bundle/MainBundle/Resources/views/AdminAction/checkStatusCluster.html.twig
@@ -1,4 +1,4 @@
 <a class="btn btn-sm btn-default" href="{{ url('araneum_main_admin_cluster_checkStatus', {'id': object.id}) }}"
-   title="{{ 'check_status'|trans }}" disabled="disabled">
+   title="{{ 'check_status'|trans }}">
     <i class="glyphicon glyphicon-check"></i>
 </a>
