AC-141 Implement check status in Admin panel

--- a/src/Araneum/Bundle/MainBundle/Resources/views/AdminAction/testConnection.html.twig
+++ b/src/Araneum/Bundle/MainBundle/Resources/views/AdminAction/testConnection.html.twig
@@ -1,4 +1,5 @@
 <a class="btn btn-sm btn-default" href="{{ url('araneum_main_admin_connection_testConnection', {'id': object.id}) }}"
-   title="{{ 'test_connection'|trans }}" disabled="disabled">
+   title="{{ 'test_connection'|trans }}"
+   {% if object.type is constant('AraneumMainBundle:Connection::CONN_DB') %}disabled="disabled"{% endif %}>
     <i class="glyphicon glyphicon-signal"></i>
 </a>
