--- a/src/Araneum/Bundle/MainBundle/Resources/views/AdminAction/checkStatusApplication.html.twig
+++ b/src/Araneum/Bundle/MainBundle/Resources/views/AdminAction/checkStatusApplication.html.twig
@@ -1,4 +1,5 @@
-<a href="#" data-url="{{ url('araneum_main_admin_application_check_status_state', {'id': object.id}) }}"
+<a href="{{ url('araneum_main_admin_application_check_status_state', {'id': object.id}) }}"
+   data-url="{{ url('araneum_main_admin_application_check_status_state', {'id': object.id}) }}"
    class="btn btn-sm btn-default" title="{{ 'check_status'|trans }}" id="btn-{{ object.id }}">
     <i class="glyphicon glyphicon-check"></i>
 </a>
