AC-147 When you log on the website feature "Remember me" doesn't work

--- a/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Araneum/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -43,7 +43,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <label class="pull-left">
-                                    <input type="checkbox" value="remember-me" name="_remember_me">
+                                    <input type="checkbox" id="remember_me" name="_remember_me" value="on">
                                     {{ 'remember_me'|trans }}
                                 </label>
                             </div>
