AC-157 Customize login ang recovery password pages

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ lang }}" data-ng-app="angle" class="">
 <head>
     <meta charset="UTF-8"/>
     <title>{% block title %}Core{% endblock %}</title>
