AC-162 Create language action

--- a/web/assets/source/html/partials/top-navbar.html
+++ b/web/assets/source/html/partials/top-navbar.html
@@ -77,7 +77,7 @@
    <!-- START Search form-->
    <form role="search" action="search.html" class="navbar-form">
       <div class="form-group has-feedback">
-         <input type="text" placeholder="{{ 'topbar.search.PLACEHOLDER' | translate }}" class="form-control" />
+         <input type="text" placeholder="{{ 'admin.topbar.search.PLACEHOLDER' | translate }}" class="form-control" />
          <div search-dismiss="search-dismiss" class="fa fa-times form-control-feedback"></div>
       </div>
       <button type="submit" class="hidden btn btn-default">Submit</button>
