--- a/web/assets/source/html/partials/settings.html
+++ b/web/assets/source/html/partials/settings.html
@@ -1,6 +1,6 @@
-<h3 translate="offsidebar.setting.SETTINGS" class="text-center text-thin">Settings</h3>
+<h3 translate="admin.offsidebar.setting.SETTINGS" class="text-center text-thin">Settings</h3>
 <div class="p">
-   <h4 translate="offsidebar.setting.THEMES" class="text-muted text-thin">Themes</h4>
+   <h4 translate="admin.offsidebar.setting.THEMES" class="text-muted text-thin">Themes</h4>
    <div class="table-grid mb">
       <div class="col mb">
          <div class="setting-color">
@@ -113,7 +113,7 @@
 <div class="p">
    <h4 class="text-muted text-thin">Layout</h4>
    <div class="clearfix">
-      <p translate="offsidebar.setting.layout.FIXED" class="pull-left">Fixed</p>
+      <p translate="admin.offsidebar.setting.layout.FIXED" class="pull-left">Fixed</p>
       <div class="pull-right">
          <label class="switch">
             <input type="checkbox" ng-model="app.layout.isFixed" />
@@ -134,7 +134,7 @@
 <div ng-if="!app.layout.horizontal" class="p">
    <h4 class="text-muted text-thin">Aside</h4>
    <div class="clearfix">
-      <p translate="offsidebar.setting.layout.COLLAPSED" class="pull-left">Collapsed</p>
+      <p translate="admin.offsidebar.setting.layout.COLLAPSED" class="pull-left">Collapsed</p>
       <div class="pull-right">
          <label class="switch">
             <input type="checkbox" ng-model="app.layout.isCollapsed" />
