--- a/web/assets/source/less/app/spinner.less
+++ b/web/assets/source/less/app/spinner.less
@@ -182,6 +182,16 @@ body {
     background-color: #fff;
   }
 
+  div[ng-controller='DashboardController'] {
+    .sk-spinner-circle .sk-circle:before {
+      background-color: black;
+    }
+
+    &>div:not(:last-child) .sk-spinner-circle .sk-circle:before {
+      background-color: white;
+    }
+  }
+
 
 }
 
