AC-160 Develop Dashboard Widgets

--- a/web/assets/source/less/app/spinner.less
+++ b/web/assets/source/less/app/spinner.less
@@ -187,7 +187,7 @@ body {
       background-color: black;
     }
 
-    &>div:not(:last-child) .sk-spinner-circle .sk-circle:before {
+    & > div > div:not(.white) .sk-spinner-circle .sk-circle:before {
       background-color: white;
     }
   }
