--- a/app/Resources/views/admin.login.html.twig
+++ b/app/Resources/views/admin.login.html.twig
@@ -1,4 +1,4 @@
-<div ng-controller="LoginUsersController as login" ng-init="login.setToken('{{ _csrf_token }}')" class="block-center mt-xl wd-xl">
+<div ng-controller="LoginController as login" ng-init="login.setCSRFToken('{{ _csrf_token }}')" class="block-center mt-xl wd-xl">
 {% verbatim %}
 	<!-- START panel-->
 	<div class="panel panel-dark panel-flat">
@@ -27,13 +27,12 @@
 							<input type="checkbox" value="" name="account_remember" ng-model="login.account.remember" />
 							<span class="fa fa-check"></span>Remember Me</label>
 					</div>
-					<div class="pull-right"><a ui-sref="page.recover" class="text-muted">Forgot your password?</a>
+					<div class="pull-right"><a ui-sref="recover" class="text-muted">Forgot your password?</a>
 					</div>
 				</div>
 				<button type="submit" class="btn btn-block btn-primary mt-lg">Login</button>
 			</form>
 			<div ng-show="login.authMsg" class="alert alert-danger text-center">{{login.authMsg}}</div>
-			<p class="pt-lg text-center">Need to Signup?</p><a ui-sref="page.register" class="btn btn-block btn-default">Register Now</a>
 		</div>
 	</div>
 	<!-- END panel-->
