AC-200 Does not work urls without language

--- a/app/Resources/SonataAdminBundle/views/Core/lang_block.html.twig
+++ b/app/Resources/SonataAdminBundle/views/Core/lang_block.html.twig
@@ -1,4 +1,4 @@
-{% for locale in locales|split('|') %}
+{% for locale in locales %}
     <li role="presentation">
         <a role="menuitem"
            href="{{ url(
