AC-157 Customize login ang recovery password pages

--- a/app/Resources/views/admin.login.html.twig
+++ b/app/Resources/views/admin.login.html.twig
@@ -27,7 +27,7 @@
 							<input type="checkbox" value="" name="account_remember" ng-model="login.account.remember" />
 							<span class="fa fa-check"></span>Remember Me</label>
 					</div>
-					<div class="pull-right"><a ui-sref="recover" class="text-muted">Forgot your password?</a>
+					<div class="pull-right"><a ui-sref="resetting" class="text-muted">Forgot your password?</a>
 					</div>
 				</div>
 				<button type="submit" class="btn btn-block btn-primary mt-lg">Login</button>
