--- a/app/Resources/views/admin.layout.html.twig
+++ b/app/Resources/views/admin.layout.html.twig
@@ -2,7 +2,7 @@
 <html lang="en" data-ng-app="araneum">
 
 <head>
-    <base href="/">
+    <base href="/en/manage/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Araneum admin page">
