AC-232 Add russian language(instead of Spanish)

--- a/web/assets/source/html/users/partials/check-email.html
+++ b/web/assets/source/html/users/partials/check-email.html
@@ -1,2 +1,2 @@
-<p class="text-center pv">PASSWORD RESET</p>
+<p class="text-center pv" translate="user.PASSWORD_RESET">PASSWORD RESET</p>
 <p class="text-center">{{ 'FOSUserBundle.resetting.check_email' | translate:{ 'email': ctrl.maskedEmail } }}</p>
