AC-232 Add russian language(instead of Spanish)

--- a/web/assets/source/html/partials/sidebar.html
+++ b/web/assets/source/html/partials/sidebar.html
@@ -24,7 +24,7 @@
                   </div>
                   <!-- Name and Job-->
                   <div class="user-block-info">
-                     <span class="user-block-name" translate="sidebar.WELCOME">{{user.name}}</span>
+                     <span class="user-block-name" translate="admin.sidebar.WELCOME">{{user.name}}</span>
                      <span class="user-block-role">{{user.email}}</span>
                   </div>
                </div>
