--- a/web/assets/source/html/partials/chat.html
+++ b/web/assets/source/html/partials/chat.html
@@ -1,8 +1,8 @@
-<h3 translate="offsidebar.chat.CONNECTIONS" class="text-center text-thin">Connections</h3>
+<h3 translate="admin.offsidebar.chat.CONNECTIONS" class="text-center text-thin">Connections</h3>
 <ul class="nav">
    <!-- START list title-->
    <li class="p">
-      <small translate="offsidebar.chat.ONLINE" class="text-muted">ONLINE</small>
+      <small translate="admin.offsidebar.chat.ONLINE" class="text-muted">ONLINE</small>
    </li>
    <!-- END list title-->
    <li>
@@ -85,7 +85,7 @@
    </li>
    <!-- START list title-->
    <li class="p">
-      <small translate="offsidebar.chat.OFFLINE" class="text-muted">OFFLINE</small>
+      <small translate="admin.offsidebar.chat.OFFLINE" class="text-muted">OFFLINE</small>
    </li>
    <!-- END list title-->
    <li>
@@ -132,7 +132,7 @@
       <div class="p-lg text-center">
          <!-- Optional link to list more users-->
          <a href="#" title="See more contacts" class="btn btn-purple btn-sm">
-            <strong translate="offsidebar.chat.LOAD_MORE">Load more..</strong>
+            <strong translate="admin.offsidebar.chat.LOAD_MORE">Load more..</strong>
          </a>
       </div>
    </li>
@@ -140,7 +140,7 @@
 <!-- Extra items-->
 <div class="p">
    <p>
-      <small translate="offsidebar.chat.TASK_COMPLETION" class="text-muted">Tasks completion</small>
+      <small translate="admin.offsidebar.chat.TASK_COMPLETION" class="text-muted">Tasks completion</small>
    </p>
    <div class="progress progress-xs m0">
       <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-success progress-80">
@@ -150,7 +150,7 @@
 </div>
 <div class="p">
    <p>
-      <small translate="offsidebar.chat.QUOTA" class="text-muted">Upload quota</small>
+      <small translate="admin.offsidebar.chat.QUOTA" class="text-muted">Upload quota</small>
    </p>
    <div class="progress progress-xs m0">
       <div role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-warning progress-40">
