AC-232 Add russian language(instead of Spanish)

--- a/web/assets/source/html/partials/sidebar.html
+++ b/web/assets/source/html/partials/sidebar.html
@@ -13,7 +13,7 @@
                <div class="item user-block">
                   <!-- User picture-->
                   <div class="user-block-picture text-center">
-                     <div ng-click="editProfile()" class="user-block-status" tooltip="Open profile">
+                     <div ng-click="editProfile()" class="user-block-status" tooltip="{{'user.OPEN_PROFILE' | translate}}">
                         <img ng-src="{{user.picture}}" alt="Avatar" class="img-thumbnail img-circle" />
                         <div class="circle circle-success circle-lg"></div>
                      </div>
