AC-232 Add russian language(instead of Spanish)

--- a/web/assets/source/html/partials/sidebar.html
+++ b/web/assets/source/html/partials/sidebar.html
@@ -32,7 +32,7 @@
                                 <div class="circle circle-success circle-lg"></div>
                             </div>
 
-                            <button ng-click="logout()" type="button" class="mb-sm mt btn btn-default" tooltip="Logout">
+                            <button ng-click="logout()" type="button" class="mb-sm mt btn btn-default" tooltip="{{'user.LOGOUT' | translate}}">
                                 <i class="icon-logout"></i>
                             </button>
                         </div>
