--- a/web/admin/source/resource/html/partials/sidebar.html
+++ b/web/admin/source/resource/html/partials/sidebar.html
@@ -20,7 +20,7 @@
         <ul class="nav">
             <!-- START user info-->
             <li class="has-user-block">
-                <div collapse="userBlockVisible" ng-controller="ProfileCtrl"
+                <div collapse="userBlockVisible" ng-controller="ProfileController"
                      ng-class="{'whirl traditional': inLoading}">
                     <div class="item user-block">
                         <!-- User picture-->
