AC-211 Change application structure

--- a/web/admin/source/resource/html/users/partials/request.html
+++ b/web/admin/source/resource/html/users/partials/request.html
@@ -24,7 +24,7 @@
 		<span ng-show="ctrl.form.username.$dirty &amp;&amp; ctrl.form.username.$error.pattern" class="text-danger" translate="validators.FIELD_REQUIRED">This field must be a valid username or email address</span>
 	</div>
 
-	<button type="submit" class="btn btn-danger btn-block" translate="general.RESET">Reset</button>
+	<button type="submit" class="btn btn-danger btn-block" translate="admin.general.RESET">Reset</button>
 
 	<div class="mt-lg text-center">
 		<a ui-sref="login" class="text-muted" translate="user.SIGN_IN">Sign In</a>
