AC-240 Need to create opportunity "back to home page when click on logo"

--- a/web/admin/source/resource/html/partials/top-navbar.html
+++ b/web/admin/source/resource/html/partials/top-navbar.html
@@ -4,7 +4,7 @@
    <div class="navbar-header">
       <a ui-sref="app.dashboard" class="navbar-brand">
          <div class="brand-logo">
-            <img src="/admin/build/img/logo.png" alt="App Logo1" class="img-responsive" />
+            <img src="/admin/build/img/logo.png" alt="App Logo" class="img-responsive" />
          </div>
          <div class="brand-logo-collapsed">
             <img src="/admin/build/img/logo-single.png" alt="App Logo" class="img-responsive" />
