AC-312 Create Runner widget

--- a/web/admin/source/resource/html/partials/top-navbar.html
+++ b/web/admin/source/resource/html/partials/top-navbar.html
@@ -35,8 +35,8 @@
          </li>
          <!-- END User avatar toggle-->
 
-         <li dropdown="" is-open="language.listIsOpen">
-            <a dropdown-toggle="">
+         <li uib-dropdown="" is-open="language.listIsOpen">
+            <a uib-dropdown-toggle="">
                <em class="icon-globe-alt" ></em>
                {{language.selected}}
             </a>
